--- a/index.html
+++ b/index.html
@@ -6,16 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+
     
-    <script src="./js/task-1-exercise.js"></script>
-    <!-- <script src="./js/task-2-exercise.js"></script> -->
-    <!-- <script src="./js/task-3-exercise.js"></script> -->
-    <!-- <script src="./js/task-4-exercise.js"></script> -->
-    <!-- <script src="./js/task-5-exercise.js"></script> -->
-    <!-- <script src="./js/task-6-exercise.js"></script> -->
-    <!-- <script src="./js/task-7-exercise.js"></script> -->
-    <!-- <script src="./js/task-8-exercise.js"></script> -->
-    <!-- <script src="./js/task-9-exercise.js"></script> -->
-    <!-- <script src="./js/task-10-exercise.js"></script> -->
+    <script src="./js/users.js" type="module"></script>
+    <!-- <script src="./js/forEach.js"></script> -->
+    <script src="./js/task-1-exercise.js" type="module"></script>
 </body>
 </html>
